--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cypress": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-spinners": "^0.13.8",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
